--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* horarios */
 .bodyhorario{
-   background-image: url(img/hermoso-concepto-cambio-horario-primavera.jpg);
+background-color: antiquewhite;
    padding: 10px;
    margin: 50px;
 }
@@ -55,6 +55,7 @@ font-style: italic;
 .ho9{
    color: #ff006a;
 }
+
 /* index */
 .h1{
  color: #062eca;
@@ -78,18 +79,17 @@ font-style: italic;
     border-style: solid;
     border-color: rgb(10, 108, 108);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
-
  }
- .nav{
-    border-style: ridge;
-    border-color: black;
-        margin-left: 5px;
-        margin-right: 5px;
-        background-color: rgb(196, 255, 255);
-        padding: 5px;  
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+ .ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-style: solid;
+  margin: 5px;
+  border-width: 2px;
+  padding: 15px;
+  border-color: #001463;
+  border-radius: 50px;
  }
-
  /* contacto */
  
