--- a/style.css
+++ b/style.css
@@ -95,9 +95,36 @@ font-style: italic;
    background-color: #00ffb3;
  }
  /* proyecto final */
-.navegador{
+ .fondo1{
+  background-image: url(img/9279915.jpg);
+
+ }
+.t2{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    border-style: solid;
+   border-radius: 50px;
+   }
+   /*tarea*/
+   .contenedor{
+      display: flex;
+      flex-wrap: wrap;
+      width: 980px;
+      margin: 0 auto;
+      margin-top: 40px;
+      background-color: #001463;
+   }
+   @media only screem and (min-widht: 320px) and (max-width:576px) {
+.contenedor{
+   width: 100%;
+   padding-left: 23px;
+   flex-direction: column-reverse;
 }
+.cajas{
+   width: 100%;
+}
+   }
+   
+
+
